syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

service CompanyJob {
    rpc ReadCompanyJob(CompanyJobRequest) returns (CompanyJobPayload);
	rpc CreateCompanyJob(CompanyJobPayload) returns (google.protobuf.Empty);
	rpc UpdateCompanyJob(CompanyJobPayload) returns (google.protobuf.Empty);
	rpc DeleteCompanyJob(CompanyJobPayload) returns (google.protobuf.Empty);
}
message CompanyJobRequest{
		string Id=1;
	}

	message CompanyJobPayload {
		 string Id = 1;
         string Company = 2;
		 google.protobuf.Timestamp ProfileCreated = 3;
         bool IsInactive = 4;
         bool IsCompanyHidden = 5;
	}